flyway instead of liquibase

--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.liquibase:liquibase-core'
     implementation 'com.auth0:java-jwt:3.18.3'
     compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.flywaydb:flyway-core:8.5.4'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
