--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,3 +12,14 @@ spring:
       ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+  flyway:
+    enabled: true
+
+app:
+  auth:
+    tokenSecret: ${SECURITY_SECRET}
+    tokenExpirationMSec: 864000000
+    tokenPrefix: "Bearer "
+    headerString: "Authorization"
+    cors:
+      allowedOrigins: http://localhost:8080
