--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,3 +15,14 @@ spring:
       ddl-auto: none
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+  flyway:
+    enabled: true
+
+app:
+  auth:
+    tokenSecret: ${SECURITY_SECRET}
+    tokenExpirationMSec: 864000000
+    tokenPrefix: "Bearer "
+    headerString: "Authorization"
+    cors:
+      allowedOrigins: https://nc-spring-2022.herokuapp.com
