package spa in jar

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
+pluginManagement {
+    plugins {
+        id 'org.siouan.frontend-jdk11' version '6.0.0'
+    }
+    repositories {
+        gradlePluginPortal()
+    }
+}
+
 rootProject.name = 'nc_spring_2022'
+include 'frontend'
