--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.auth0:java-jwt:3.19.1'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+    implementation 'org.springdoc:springdoc-openapi-security:1.6.6'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'org.flywaydb:flyway-core:8.5.4'
     runtimeOnly 'org.postgresql:postgresql'
