oauth2 return jwt in cookies

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,4 +32,4 @@ app:
     tokenPrefix: "Bearer "
     headerString: "Authorization"
     cors:
-      allowedOrigins: http://localhost:8080
+      allowedOrigins: http://localhost:8080, http://localhost:3000
