--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "axios": "^0.26.1",
+    "js-cookie": "^3.0.1",
+    "react-hook-form": "^7.29.0",
     "serve": "^13.0.2"
   }
 }
