--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -35,4 +35,4 @@ app:
     tokenPrefix: "Bearer "
     headerString: "Authorization"
     cors:
-      allowedOrigins: https://nc-spring-2022.herokuapp.com
+      allowedOrigins: https://nc-spring-2022.herokuapp.com, https://meek-valkyrie-da6433.netlify.app
